# term2ai

./: .coveragerc  .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  conftest.py  pyproject.toml  pytest.ini
.github/workflows/: ci.yml
docs/: api-design.md  architecture.md  cli-reference.md  functional-patterns.md  technical-decisions.md  user-guide.md
plan/: roadmap.md
plan/checkpoints/: 00_project_setup.md  01.5_global_hijacking.md  01_basic_pty_wrapper.md  02.5_cli_interface.md  02.5_functional_cli.md  02_io_handling.md  02_monad_io_system.md  03_functional_cli.md  03_terminal_state.md  04_event_sourcing_state.md  04_signal_handling.md  05_ansi_parsing.md  05_functional_signals.md  06_pure_ansi_parsing.md  06_session_management.md  07_advanced_features.md  07_functional_sessions.md  08_advanced_features.md
plan/models/: __init__.py  checkpoint.py  project.py  test_tracking.py
scripts/: safe_test.sh  test.sh
src/term2ai/: __init__.py  models.py  monads.py  pty_wrapper.py  pure_functions.py
src/term2ai/core/: pty_wrapper.py
src/term2ai/models/: __init__.py
tests/: test_dependencies.py  test_dev_tools.py  test_monads.py  test_project_structure.py  test_pty_wrapper.py  test_pure_functions.py  test_pydantic_models.py
